--- a/index.html
+++ b/index.html
@@ -13,90 +13,104 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+
     <header class="header">
-        <nav class="nav">
-        <a class="logo header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
-        <ul class="list nav-list">
-            <li class="item"><a class="link current" href="./index.html">Студия</a></li>
-            <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-            <li class="item"><a class="link" href="#contacts">Контакты</a></li>
-        </ul>
-        </nav>
-        <ul class="list header-contacts">
-            <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <div class="container">
+            <nav class="nav">
+                <a class="logo header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
+                <ul class="list nav-list">
+                    <li class="item"><a class="link current" href="./index.html">Студия</a></li>
+                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item"><a class="link" href="#contacts">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="list header-contacts">
+                <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </header>
+
     <main class="main">
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button class="btn order-btn" type="button">Заказать услугу</button>
         </section>
     <section class="section-qualities">
-        <!--Заголовок скрыть-->
-        <h2 class="title">Наши особенности</h2>
-        <ul class="list">
-            <li class="item">
-                <h3 class="subtitle">Внимание к деталям</h3>
-                <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li class="item">
-                <h3 class="subtitle">Пунктуальность</h3>
-                <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li class="item">
-                <h3 class="subtitle">Планирование</h3>
-                <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li class="item">
-                <h3 class="subtitle">Современные технологии</h3>
-                <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
+        <div class="container">
+            <!--Заголовок скрыть-->
+            <h2 class="title">Наши особенности</h2>
+            <ul class="list">
+                <li class="item">
+                    <h3 class="subtitle">Внимание к деталям</h3>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li class="item">
+                    <h3 class="subtitle">Пунктуальность</h3>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li class="item">
+                    <h3 class="subtitle">Планирование</h3>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li class="item">
+                    <h3 class="subtitle">Современные технологии</h3>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="section-do">
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="list">
-            <li class="item"><img class="img" src="./images/img1.jpg" alt="Разработка веб-сайтов" width="370"></li>
-            <li class="item"><img class="img" src="./images/img2.jpg" alt="Разработка приложений" width="370"></li>
-            <li class="item"><img class="img" src="./images/img3.jpg" alt="Разработка дизайнов" width="370"></li>
-        </ul>
+        <div class="container">
+            <h2 class="title">Чем мы занимаемся</h2>
+            <ul class="list">
+                <li class="item"><img class="img" src="./images/img1.jpg" alt="Разработка веб-сайтов" width="370"></li>
+                <li class="item"><img class="img" src="./images/img2.jpg" alt="Разработка приложений" width="370"></li>
+                <li class="item"><img class="img" src="./images/img3.jpg" alt="Разработка дизайнов" width="370"></li>
+            </ul>
+        </div>
     </section>
     <section class="section-team">
-        <h2 class="title">Наша команда</h2>
-        <ul class="list">
-            <li class="item">
-                <img class="img" src="./images/img4.jpg" alt="Фото дизайнера" width="270">
-                <h3 class="subtitle">Игорь Демьяненко</h3>
-                <p class="text">Product Designer</p> 
-            </li>
-            <li class="item">
-                <img class="img" src="./images/img5.jpg" alt="Фото разработчика" width="270">
-                <h3 class="subtitle">Ольга Репина</h3>
-                <p class="text">Frontend Developer</p> 
-            </li>
-            <li class="item">
-                <img class="img" src="./images/img6.jpg" alt="Фото макреколога" width="270">
-                <h3 class="subtitle">Николай Тарасов</h3>
-                <p class="text">Marketing</p> 
-            </li>
-            <li class="item">
-                <img class="img" src="./images/img7.jpg" alt="Фото дизайнера" width="270">
-                <h3 class="subtitle">Михаил Ермаков</h3>
-                <p class="text">UI Designer</p> 
-            </li>
-        </ul>
+        <div class="container">
+            <h2 class="title">Наша команда</h2>
+            <ul class="list">
+                <li class="item">
+                    <img class="img" src="./images/img4.jpg" alt="Фото дизайнера" width="270">
+                    <h3 class="subtitle">Игорь Демьяненко</h3>
+                    <p class="text">Product Designer</p>
+                </li>
+                <li class="item">
+                    <img class="img" src="./images/img5.jpg" alt="Фото разработчика" width="270">
+                    <h3 class="subtitle">Ольга Репина</h3>
+                    <p class="text">Frontend Developer</p>
+                </li>
+                <li class="item">
+                    <img class="img" src="./images/img6.jpg" alt="Фото макреколога" width="270">
+                    <h3 class="subtitle">Николай Тарасов</h3>
+                    <p class="text">Marketing</p>
+                </li>
+                <li class="item">
+                    <img class="img" src="./images/img7.jpg" alt="Фото дизайнера" width="270">
+                    <h3 class="subtitle">Михаил Ермаков</h3>
+                    <p class="text">UI Designer</p>
+                </li>
+            </ul>
+        </div> 
     </section>
     </main>
+
     <footer class="footer" id="contacts">
-        <a class="logo footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
-        <address class="address">
-            <a class="link" href="#">г. Киев, пр-т Леси Украинки, 26</a>
-        </address>
-        <ul class="list footer-contacts">
-            <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <div class="container">
+            <a class="logo footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
+            <address class="address">
+                <a class="link" href="#">г. Киев, пр-т Леси Украинки, 26</a>
+            </address>
+            <ul class="list footer-contacts">
+                <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </footer>
+    
 </body>
 </html>
