--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 
     <header class="header">
-        <div class="container">
+        <div class="container header-menu">
+            <a class="logo header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
             <nav class="nav">
-                <a class="logo header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
                 <ul class="list nav-list">
                     <li class="item"><a class="link current" href="./index.html">Студия</a></li>
                     <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
@@ -111,6 +111,6 @@
             </ul>
         </div>
     </footer>
-    
+
 </body>
 </html>
