--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+
     <header class="header">
-        <div class="container">
+        <div class="container header-menu">
+            <a class="logo header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
             <nav class="nav">
-                <a class="logo header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
                 <ul class="list nav-list">
                     <li class="item"><a class="link" href="./index.html">Студия</a></li>
                     <li class="item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
