--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     </header>
 
     <main class="main">
-        <section class="hero">
+        <section class="hero section">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button class="btn order-btn" type="button">Заказать услугу</button>
         </section>
-    <section class="section-qualities">
+    <section class="section-qualities section">
         <div class="container">
             <!--Заголовок скрыть-->
-            <h2 class="title">Наши особенности</h2>
-            <ul class="list">
+            <h2 class="title visually-hidden">Наши особенности</h2>
+            <ul class="list qualities-list">
                 <li class="item">
                     <h3 class="subtitle">Внимание к деталям</h3>
                     <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -60,17 +60,17 @@
             </ul>
         </div>
     </section>
-    <section class="section-do">
+    <section class="section-do section">
         <div class="container">
             <h2 class="title">Чем мы занимаемся</h2>
-            <ul class="list">
+            <ul class="list do-list">
                 <li class="item"><img class="img" src="./images/img1.jpg" alt="Разработка веб-сайтов" width="370"></li>
                 <li class="item"><img class="img" src="./images/img2.jpg" alt="Разработка приложений" width="370"></li>
                 <li class="item"><img class="img" src="./images/img3.jpg" alt="Разработка дизайнов" width="370"></li>
             </ul>
         </div>
     </section>
-    <section class="section-team">
+    <section class="section-team section">
         <div class="container">
             <h2 class="title">Наша команда</h2>
             <ul class="list">
@@ -106,7 +106,7 @@
                 <a class="link" href="#">г. Киев, пр-т Леси Украинки, 26</a>
             </address>
             <ul class="list footer-contacts">
-                <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item mail-footer"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
