--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="main">
-        <section class="section-portfolio">
+        <section class="section-portfolio section">
             <div class="container">
                 <!--Заголовок скрыть-->
                 <h1 class="title">Портфолио</h1>
