Добавляет геометрию и флексы к portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,76 +35,94 @@
         <section class="section-portfolio section">
             <div class="container">
                 <!--Заголовок скрыть-->
-                <h1 class="title">Портфолио</h1>
-                <ul class="list portfolio-list">
+                <h1 class="title visually-hidden">Портфолио</h1>
+                <ul class="list portfolio-list-btn">
                     <li class="item"><button class="btn portfolio-btn current" type="button">Все</button></li>
                     <li class="item"><button class="btn portfolio-btn" type="button">Веб-сайты</button></li>
                     <li class="item"><button class="btn portfolio-btn" type="button">Приложения</button></li>
                     <li class="item"><button class="btn portfolio-btn" type="button">Дизайн</button></li>
                     <li class="item"><button class="btn portfolio-btn" type="button">Маркетинг</button></li>
                 </ul>
-                <ul class="list">
+                <ul class="list portfolio-list">
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio1.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Технокряк</h2>
-                            <p class="text">Веб-сайт</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Технокряк</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio2.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
-                            <p class="text">Дизайн</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio3.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Ресторан Seafood</h2>
-                            <p class="text">Приложение</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Ресторан Seafood</h2>
+                                <p class="text">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio4.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Проект Prime</h2>
-                            <p class="text">Маркетинг</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Проект Prime</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio5.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Проект Boxes</h2>
-                            <p class="text">Приложение</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Проект Boxes</h2>
+                                <p class="text">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio6.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Inspiration has no Borders</h2>
-                            <p class="text">Веб-сайт</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Inspiration has no Borders</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio7.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Издание Limited Edition</h2>
-                            <p class="text">Дизайн</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Издание Limited Edition</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio8.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Проект LAB</h2>
-                            <p class="text">Маркетинг</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Проект LAB</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a class="link" href="#">
                             <img class="img" src="./images/portfolio9.jpg" alt="Изображение проекта" width="370">
-                            <h2 class="subtitle">Growing Business</h2>
-                            <p class="text">Приложение</p>
+                            <div class="card-border">
+                                <h2 class="subtitle">Growing Business</h2>
+                                <p class="text">Приложение</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
