--- a/index.html
+++ b/index.html
@@ -76,23 +76,31 @@
             <ul class="list">
                 <li class="item">
                     <img class="img" src="./images/img4.jpg" alt="Фото дизайнера" width="270">
-                    <h3 class="subtitle">Игорь Демьяненко</h3>
-                    <p class="text">Product Designer</p>
+                    <div class="team-container">
+                        <h3 class="subtitle">Игорь Демьяненко</h3>
+                        <p class="text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="item">
                     <img class="img" src="./images/img5.jpg" alt="Фото разработчика" width="270">
-                    <h3 class="subtitle">Ольга Репина</h3>
-                    <p class="text">Frontend Developer</p>
+                    <div class="team-container">
+                        <h3 class="subtitle">Ольга Репина</h3>
+                        <p class="text">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="item">
                     <img class="img" src="./images/img6.jpg" alt="Фото макреколога" width="270">
-                    <h3 class="subtitle">Николай Тарасов</h3>
-                    <p class="text">Marketing</p>
+                    <div class="team-container">
+                        <h3 class="subtitle">Николай Тарасов</h3>
+                        <p class="text">Marketing</p>
+                    </div>
                 </li>
                 <li class="item">
                     <img class="img" src="./images/img7.jpg" alt="Фото дизайнера" width="270">
-                    <h3 class="subtitle">Михаил Ермаков</h3>
-                    <p class="text">UI Designer</p>
+                    <div class="team-container">
+                        <h3 class="subtitle">Михаил Ермаков</h3>
+                        <p class="text">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div> 
