Добавляет контейнер для hero

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
     <main class="main">
         <section class="hero section">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="btn order-btn" type="button">Заказать услугу</button>
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button class="btn order-btn" type="button">Заказать услугу</button>
+            </div>
         </section>
     <section class="section-qualities section">
         <div class="container">
